# m3shapes

./: .clang-format  .gitignore  CMakeLists.txt  PKGBUILD  README.md  default.nix  flake.nix  shell.nix
examples/: ShapeGallery.qml  main.cpp
src/core/: CornerRounding.hpp  Cubic.cpp  Point.hpp  RoundedPolygon.cpp
src/morph/: FeatureMapping.cpp  FeatureMapping.hpp  FloatMapping.cpp  Morph.cpp  PolygonMeasure.cpp
src/qml/: MaterialShapeItem.cpp  MaterialShapeItem.hpp
src/shapes/: MaterialShapes.cpp  MaterialShapes.hpp  Shapes.cpp
